# sipcmd

./: .clang-format  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  build.sh  sipcmd.sh
src/: channels.cpp  channels.h  commands.cpp  commands.h  includes.h  main.cpp  main.h  state.h
